stylesheet.less
/* ... */
.widget.responsiveslideshow .slideshow-widget-controls .dot
{
      background-color: @color-swatch4;
      width: 8px;
      height: 8px;
      line-height: 14px;
      display: inline-block;
      border: none;
      -webkit-border-radius: 50px;
      -moz-border-radius: 50px;
      border-radius: 50px;
      cursor: pointer;
}

.widget.responsiveslideshow .slideshow-widget-controls .dot.selected
{
   background-color: @color-swatch2;
}

.widget.responsiveslideshow .dot {
  border: none;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  border-radius: 50px;
}

/* ===============================
   IPAD WIDTH
   =============================== */

@media only screen and (max-width: 768px) { 


  body {
    border-top: 4px solid @color-swatch2; 
  }

  header {
  padding: 20px 0 14px;
  width: 90%;
  margin: 0 auto;
  border-right: none;
}

footer {
  min-height: auto;
  padding: 0 5%;

}

header .widget.content {
  float: left;
  width: 100%;
}

header .widget.content p {
  text-align: left;
}


.right-content {
  width: 100%;
  margin: 0;
  padding: 0;
  
  background-color: @color-swatch1;
}

.main {
  width: 90%;
  margin: 0 5%;
  padding: 0;
  padding: 1em 0;
}

.left-nav {
  display: none;
}

.vertical-nav {
  display: none;
}

.top-nav {
  display: block;
  background-color: @color-swatch7;
}


.widget.profile .twitter {
  width: 50%;
}


.companyheader {
    display: block;
    float: left;
    padding: 0;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin: 0;
  text-align: left;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
}

    /* NAV */


  .top-nav {
    border-bottom: 1px solid lighten(@color-swatch6,30%);
  }


  .widget.extendednavigation .bk-overlay {
      width: 200px;
      height: 85px;
      float: right;
      top: -85px !important;
      left: 90% !important;
  }


  .widget.extendednavigation {
      display: block;
      width: 90%;
      margin: 50px auto 0;
  }

   /* NAV ICON */

  .widget .extendednavigation a.pull {
    display: block;
    width: 100%;
    position: absolute;
    top: 6px;
  }

    .widget .extendednavigation a.pull:after {
    content:"";
    background: image('/images/nav-icon.png') no-repeat;
    width: 30px;
    height: 30px;
    display: inline-block;
    position: absolute;
    right: 0;
    top: -55px;
  }

  /* NAV */


.widget.extendednavigation ul li > ul {
  display: none !important;
}
  
 .widget .extendednavigation ul {
    display: none;
    border-top: 1px solid lighten(@color-swatch6,30%);
    padding: 0;
  }

 .widget.extendednavigation ul li {
    border-bottom: 1px solid lighten(@color-swatch6,30%);
    padding: 16px 0;
    text-align: left;
    display: block;
  }

   .widget.extendednavigation ul li:last-child {
    border-bottom: none;
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li:hover,
  .widget.extendednavigation ul li.folder:hover {
    color: @font-swatch6-color-hover;
    background-color: @font-swatch6-background-color-hover;
    text-decoration: none;
}

  .widget.extendednavigation ul li.folder {
    padding: 16px 0;
  }

  .widget .extendednavigation li {
    width: 100%;
    padding: 0;
  }

  .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
      padding: 5px 5px 5px 0;
      margin: 0;
      color: @font-swatch6-color;
  }

.widget.extendednavigation ul li.folder .text:hover {
    color: @font-swatch6-color-hover;
    background-image: image('/images/arrow-down.png');
    background-position: right 13px;
    background-repeat: no-repeat;
}


  .widget.extendednavigation ul li:hover > ul {
      display: block !important;
      width: 100%;
      position: relative;
      z-index: 500;
      margin-top: 16px;
      background-color: darken(@color-swatch7,3%);
  }

  .widget.extendednavigation ul li:hover > ul > li {
     border-bottom: none;
  }

  .widget.extendednavigation ul li:hover > ul > li .text {
    color: @font-swatch6-color;
  }

  .widget.extendednavigation ul li:hover > ul > li:hover {
    background-color: darken(@color-swatch7,3%);
  }

  .widget.extendednavigation ul li:hover > ul > li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li.folder {
    border-radius: 0;
  }

  .widget.extendednavigation ul li:hover > ul li:first-child {
    padding-top: 16px;
    border-top: none;
  }

    .widget.extendednavigation ul li:hover > ul li:last-child {
    padding-top: 16px;
    border-bottom: none;
  }

  .widget.extendednavigation li:hover > ul > li > a {
    padding-left: 10px;
  }


    /* FEATURE */

  .feature-slideshow {
    margin: 0 0 50px;
  }




     /* GALLERY */

    .widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
    font-size:bkscale(@font-swatch5-font-size,0.9);
    line-height:bkscale(@font-swatch5-line-height,0.9);
    }

    /* SLIDESHOW */

    .widget.responsiveslideshow .slideshow-image-list, 
    .widget.responsiveslideshow .slideshow-widget {
        height:400px;
    }

}
/* ... */

